# petshop-server

./: .gitignore  README.md  pyproject.toml
petshop/: __init__.py  app.py  config.py  database.py
petshop/pets/: controllers.py  crud.py  models.py  views.py
petshop/users/: controllers.py  models.py  views.py
