[tool.poetry]
name = "petshop-server"
version = "0.1.0"
description = ""
authors = ["Pedro-Tuto <pedropb97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlmodel = "^0.0.18"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
